--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ footer a{
 
 <!-- HERO -->
 <section class="hero">
-    <h1>Lucky Seven Visual | Bangun Brand yang Terlihat Profesional & Dipercaya</h1>
+    <h1>Selamat Datang di Lucky Seven Visual</h1>
     <p>
         Lucky Seven Visual membantu bisnis tampil lebih kuat melalui desain visual,
         motion graphic, website sederhana, dan konten media sosial yang strategis.
@@ -303,3 +303,4 @@ footer a{
 
 </body>
 </html>
+
