--- a/index.html
+++ b/index.html
@@ -199,13 +199,13 @@ footer a{
 
 <!-- HERO -->
 <section class="hero">
-    <h1>Selamat Datang di Lucky Seven Visual</h1>
+    <h1>Lucky Seven Visual | Bangun Brand yang Terlihat Profesional & Dipercaya</h1>
     <p>
         Lucky Seven Visual membantu bisnis tampil lebih kuat melalui desain visual,
         motion graphic, website sederhana, dan konten media sosial yang strategis.
     </p>
 
-    <a href="https://wa.me/6282129990582" class="cta">Pesan Sekarang</a>
+    <a href="https://wa.me/6288271263451" class="cta">Pesan Sekarang</a>
 </section>
 
 <!-- VALUE -->
@@ -290,7 +290,7 @@ footer a{
         Jangan biarkan visual seadanya menurunkan nilai bisnis Anda.
         Konsultasikan kebutuhan desain Anda sekarang.
     </p>
-    <a href="https://wa.me/6282129990582">Hubungi Kami Sekarang</a>
+    <a href="https://wa.me/6288271263451">Hubungi Kami Sekarang</a>
 </section>
 
 <footer>
@@ -303,4 +303,3 @@ footer a{
 
 </body>
 </html>
-
